welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: reassignment to val
    cpt = cpt + 1
        ^